# open-modular

./: .adr-dir  .envrc  .gitignore  Cargo.toml  LICENSE.md  README.md  clippy.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/: FUNDING.yml
adr/: 0001-record-architecture-decisions.md  0003-simple-modularity.md  0004-block-lock-free-engine.md  0005-acceptable-unsafe.md  README.md
benches/: README.md
benches/open-modular-benches/: Cargo.toml
benches/open-modular-benches/benches/: engine.rs
crates/core/open-modular-core/src/: lib.rs
crates/core/open-modular-engine/: Cargo.toml
crates/core/open-modular-engine-macros/: Cargo.toml
crates/core/open-modular-engine/src/: bus.rs  lib.rs  module.rs  port.rs  processor.rs  protocol.rs
crates/core/open-modular-io/: Cargo.toml
crates/core/open-modular-io-audio/: Cargo.toml
crates/core/open-modular-io-audio/src/: api.rs  audio.rs  configuration.rs  device.rs  error.rs  host.rs  lib.rs  stream.rs
crates/core/open-modular-performance/: Cargo.toml
crates/core/open-modular-performance/src/: timing.rs
crates/core/open-modular-runtime-production/: Cargo.toml
crates/core/open-modular-runtime-production/src/: configuration.rs  context.rs  error.rs  lib.rs  process.rs  runtime.rs  runtime_old.rs
crates/core/open-modular-runtime-production/src/process/: compute.rs  control.rs  engine.rs  io.rs  statistics.rs
crates/core/open-modular-runtime-production/src/process/io/: audio.rs
crates/core/open-modular-runtime/src/: process.rs  runtime.rs
crates/core/open-modular-runtime/src/io/: audio.rs
crates/core/open-modular-synchronization/src/: barrier.rs  control.rs
crates/core/open-modular-utilities/: Cargo.toml
crates/core/open-modular-utilities/src/: thread.rs
crates/modules/io/audio/: Cargo.toml
crates/modules/open-modular-modules-generators/: Cargo.toml
crates/modules/open-modular-modules-generators/src/: lib.rs
crates/modules/open-modular-modules-io/: Cargo.toml
crates/modules/open-modular-modules-io-audio/: Cargo.toml
crates/modules/open-modular-modules-io-audio/src/: lib.rs
crates/modules/open-modular-modules-io/src/: lib.rs
crates/modules/open-modular-modules-utilities/: Cargo.toml
crates/modules/util/: Cargo.toml
crates/open-modular-core/: Cargo.toml
crates/open-modular-engine/open-modular-engine-macros/src/: lib.rs
crates/open-modular-io/open-modular-io-audio/src/: lib.rs  stream.rs  system.rs
crates/open-modular-runtime/: Cargo.toml
crates/open-modular-runtime/open-modular-runtime-production/src/: runtime.rs
crates/open-modular-runtime/open-modular-runtime-production/src/process/: control.rs  io.rs  statistics.rs
crates/open-modular-runtime/src/: lib.rs
crates/open-modular-synchronization/: Cargo.toml
crates/open-modular-synchronization/src/: barrier.rs  time.rs
crates/open-modular-utilities/: Cargo.toml
crates/open-modular-utilities/src/: lib.rs  sync.rs
crates/tools/open-modular-repl/: Cargo.toml
crates/tools/open-modular-server/: Cargo.toml
documentation/decisions/: 0006-panic-early-in-engine.md
documents/decisions/: 0002-minimal-configuration.md
documents/notes/: README.md
env/: flake.nix
environment/: flake.nix
examples/: README.md
examples/open-modular-examples-tone/: Cargo.toml
examples/open-modular-examples-tone/examples/: audio.rs  tone.rs
src/: Cargo.toml
src/lib/core/src/: lib.rs
src/lib/engine/: Cargo.toml
src/lib/engine/macros/src/: lib.rs  module.rs  module_enum.rs
src/lib/engine/src/: context.rs  lib.rs  module.rs  node.rs  port.rs  processor.rs
src/lib/io/: Cargo.toml
src/lib/io/audio/: Cargo.toml
src/lib/io/audio/src/: device.rs
src/lib/io/src/: lib.rs
src/lib/perf/: Cargo.toml
src/lib/perf/src/: lib.rs
src/lib/runtime/: Cargo.toml
src/lib/runtime/production/: Cargo.toml
src/lib/runtime/production/src/: context.rs  lib.rs  process.rs  runtime.rs
src/lib/runtime/production/src/process/: compute.rs  control.rs  io.rs  statistics.rs
src/lib/runtime/production/src/process/io/: audio.rs
src/lib/runtime/src/: io.rs  lib.rs  process.rs  runtime.rs
src/lib/runtime/src/io/: audio.rs
src/lib/sync/: Cargo.toml
src/lib/sync/src/: barrier.rs  lib.rs
src/lib/utils/: Cargo.toml
src/lib/utils/src/: collections.rs  dispatch.rs  lib.rs  sync.rs
src/mod/io/: Cargo.toml
src/mod/io/audio/: Cargo.toml
src/mod/io/audio/src/: lib.rs
src/mod/io/src/: lib.rs
src/mod/util/src/: lib.rs
