[workspace]
members  = ["benches/*", "crates/core/*", "crates/modules/*", "crates/tools/*"]
resolver = "2"

[workspace.dependencies]

# External

bitflags           = "2"
bon                = "3"
convert_case       = "0.8"
criterion          = { version = "0.5", features = ["html_reports"] }
crossbeam          = "0.8"
darling            = "0.20"
derive_more        = { features = ["full"], version = "2" }
fancy_constructor  = "2"
indexmap           = "2.8"
oneshot            = { default-features = false, features = ["std"], version = "0.1" }
proc-macro2        = "1"
quote              = "1"
rtaudio-sys        = "0.3"
syn                = "2"
thread-priority    = "1"
tracing            = { features = ["max_level_trace", "release_max_level_info"], version = "0.1" }
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
uuid               = { features = ["v4"], version = "1" }

# Workspace (Core)

open-modular-core               = { path = "crates/core/open-modular-core" }
open-modular-engine             = { path = "crates/core/open-modular-engine" }
open-modular-engine-macros      = { path = "crates/core/open-modular-engine-macros" }
open-modular-io                 = { path = "crates/core/open-modular-io" }
open-modular-io-audio           = { path = "crates/core/open-modular-io-audio" }
open-modular-performance        = { path = "crates/core/open-modular-performance" }
open-modular-runtime            = { path = "crates/core/open-modular-runtime" }
open-modular-runtime-production = { path = "crates/core/open-modular-runtime-production" }
open-modular-synchronization    = { path = "crates/core/open-modular-synchronization" }
open-modular-utilities          = { path = "crates/core/open-modular-utilities" }

# Workspace (Modules)

open-modular-modules-generators = { path = "crates/modules/open-modular-modules-generators" }
open-modular-modules-io         = { path = "crates/modules/open-modular-modules-io" }
open-modular-modules-io-audio   = { path = "crates/modules/open-modular-modules-io-audio" }
open-modular-modules-utilities  = { path = "crates/modules/open-modular-modules-utilities" }

[workspace.lints.clippy]
cargo       = "warn"
complexity  = "warn"
correctness = "deny"
pedantic    = "warn"
perf        = "warn"
restriction = "allow"
style       = "warn"
suspicious  = "warn"

[workspace.lints.rust]
deprecated_safe         = "warn"
future_incompatible     = "warn"
keyword_idents          = "warn"
let_underscore          = "warn"
nonstandard_style       = "warn"
refining_impl_trait     = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms        = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused                  = "warn"

[workspace.package]
authors    = ["Andrew Cherry (@kolektiv)"]
categories = ["multimedia", "multimedia::audio", "simulation"]
edition    = "2024"
keywords   = ["audio", "dsp", "modular", "synthesis"]
license    = "AGPL-3.0-only"
readme     = "README.md"
repository = "https://github.com/open-modular/open-modular"
version    = "0.1.0"
