[workspace]
members = [
    "bin/*",
    "lib/core",
    "lib/engine",
    "lib/engine/macros",
    "lib/io",
    "lib/io/audio",
    "lib/perf",
    "lib/runtime",
    "lib/runtime/production",
    "lib/sync",
    "lib/utils",
    "mod/gen",
    "mod/io",
    "mod/io/audio",
    "mod/util",
]
resolver = "2"

[workspace.dependencies]

# External

bitflags           = "2"
bon                = "3"
convert_case       = "0.8"
crossbeam          = "0.8"
darling            = "0.20"
derive_more        = { features = ["full"], version = "2" }
fancy_constructor  = "2"
indexmap           = "2.8"
oneshot            = { default-features = false, features = ["std"], version = "0.1" }
proc-macro2        = "1"
quote              = "1"
rtaudio-sys        = "0.3"
syn                = "2"
thread-priority    = "1"
tracing            = { features = ["max_level_trace", "release_max_level_info"], version = "0.1" }
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
uuid               = { features = ["v4"], version = "1" }

# Workspace (Libraries)

open-modular-core               = { path = "lib/core" }
open-modular-engine             = { path = "lib/engine" }
open-modular-engine-macros      = { path = "lib/engine/macros" }
open-modular-io                 = { path = "lib/io" }
open-modular-io-audio           = { path = "lib/io/audio" }
open-modular-perf               = { path = "lib/perf" }
open-modular-runtime            = { path = "lib/runtime" }
open-modular-runtime-production = { path = "lib/runtime/production" }
open-modular-sync               = { path = "lib/sync" }
open-modular-utils              = { path = "lib/utils" }

# Workspace (Modules)

open-modular-module-gen      = { path = "mod/gen" }
open-modular-module-io       = { path = "mod/io" }
open-modular-module-io-audio = { path = "mod/io/audio" }
open-modular-module-util     = { path = "mod/util" }

[workspace.lints.clippy]
cargo       = "warn"
complexity  = "warn"
correctness = "deny"
pedantic    = "warn"
perf        = "warn"
restriction = "allow"
style       = "warn"
suspicious  = "warn"

[workspace.lints.rust]
deprecated_safe         = "warn"
future_incompatible     = "warn"
keyword_idents          = "warn"
let_underscore          = "warn"
nonstandard_style       = "warn"
refining_impl_trait     = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms        = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused                  = "warn"

[workspace.package]
authors    = ["Andrew Cherry (@kolektiv)"]
categories = ["multimedia", "multimedia::audio", "simulation"]
edition    = "2024"
keywords   = ["audio", "dsp", "modular", "synthesis"]
license    = "AGPL-3.0-only"
readme     = "README.md"
repository = "https://github.com/open-modular/open-modular"
version    = "0.1.0"
