[dependencies]

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Open Modular Core"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "open-modular-core"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
