[dependencies]
fancy_constructor.workspace            = true
open-modular-core.workspace            = true
open-modular-engine.workspace          = true
open-modular-synchronization.workspace = true
open-modular-utilities.workspace       = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Open Modular Runtime"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "open-modular-runtime"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
