[dependencies]
fancy_constructor.workspace      = true
open-modular-utilities.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Open Modular Synchronization Primitives"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "open-modular-synchronization"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
