[dependencies]
convert_case.workspace = true
darling.workspace      = true
proc-macro2.workspace  = true
quote.workspace        = true
syn.workspace          = true
uuid.workspace         = true

[lib]
proc-macro = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Open Modular Engine Macros"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "open-modular-engine-macros"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
