[dependencies]
bitflags.workspace          = true
bon.workspace               = true
derive_more.workspace       = true
fancy_constructor.workspace = true
open-modular-core.workspace = true
rtaudio-sys.workspace       = true
tracing.workspace           = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Open Modular IO Audio"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "open-modular-io-audio"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
