[dependencies]
derive_more.workspace            = true
fancy_constructor.workspace      = true
open-modular-core.workspace      = true
open-modular-engine.workspace    = true
open-modular-runtime.workspace   = true
open-modular-utilities.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Open Modular Modules - IO - Audio"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "open-modular-modules-io-audio"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
