[dependencies]
open-modular-modules-io-audio.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Open Modular Modules - IO"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "open-modular-modules-io"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
