[dependencies]
fancy_constructor.workspace   = true
open-modular-engine.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Open Modular Modules - Utilities"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "open-modular-modules-utilities"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
