[dependencies]

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "open-modular-repl"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
