[dependencies]
derive_more.workspace       = true
fancy_constructor.workspace = true
oneshot.workspace           = true
thread-priority.workspace   = true
tracing.workspace           = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Open Modular Utilities"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "open-modular-utils"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
