[dependencies]
crossbeam.workspace            = true
derive_more.workspace          = true
fancy_constructor.workspace    = true
open-modular-core.workspace    = true
open-modular-engine.workspace  = true
open-modular-io.workspace      = true
open-modular-perf.workspace    = true
open-modular-runtime.workspace = true
open-modular-sync.workspace    = true
open-modular-utils.workspace   = true
thread-priority.workspace      = true
tracing.workspace              = true
uuid.workspace                 = true

[features]
default = ["perf"]
perf    = []

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "Open Modular Runtime Production"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "open-modular-runtime-production"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
