[package]
authors.workspace    = true
categories.workspace = true
description          = "Open Modular Module - IO - Audio"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "open-modular-module-io-audio"
readme.workspace     = true
repository.workspace = true
version.workspace    = true

[dependencies]
derive_more.workspace          = true
fancy_constructor.workspace    = true
open-modular-core.workspace    = true
open-modular-engine.workspace  = true
open-modular-runtime.workspace = true
open-modular-utils.workspace   = true
tracing.workspace              = true

[lints]
workspace = true
